fix overflow

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -13,6 +13,8 @@ body {
   width: 100%;
   justify-content: center;
   background-color: #f3f3f5;
+  overflow-x: hidden;
+  overflow-y: auto;
 }
 
 
